--- a/BringingItAllTogether/Views/Home/_PackageList.cshtml
+++ b/BringingItAllTogether/Views/Home/_PackageList.cshtml
@@ -1,20 +1,22 @@
 ﻿<table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
-            <th>Id</th>
             <th>Title</th>
             <th>Description</th>
             <th>Location</th>
             <th>Delete</th>
+            <th>Edit</th>
         </tr>
     </thead>
     <tbody data-bind="foreach: packages">
         <tr>
-            <td data-bind="text: Id"></td>
-            <td data-bind="text: Title"></td>
-            <td data-bind="text: Description"></td>
-            <td data-bind="text: Location"></td>
-            <td><input type="button" class="btn btn-danger btn-xs" value=" [x] delete " data-bind="click: $parent.removePackage" /></td>
+            <td><span id="spnTitle" data-bind="text: Title, visible: !isEdit()"></span><input id="inpTitle" type="text" class="form-control" data-bind="value: Title, visible: isEdit()" /><input type="hidden" data-bind="text: Id"></<input></td>
+            <td><span id="spnDescription" data-bind="text: Description, visible: !isEdit()"></span><input id="inpDescription" type="text" class="form-control" data-bind="value: Description, visible: isEdit()" /></td>
+            <td><span id="spnLocation" data-bind="text: Location, visible: !isEdit()"></span><input id="inpLocation" type="text" class="form-control" data-bind="value: Location, visible: isEdit()" /></td>
+            <td data-bind="visible: !isEdit()"><input type="button" class="btn btn-danger btn-xs" value=" [e] edit " data-bind="click: $parent.EditPackage" /></td>
+            <td data-bind="visible: !isEdit()"><input type="button" class="btn btn-danger btn-xs" value=" [x] delete " data-bind="click: $parent.DeletePackage" /></td>
+            <td data-bind="visible: isEdit"><input type="button" class="btn btn-danger btn-xs" value=" [e] update " data-bind="click: $parent.updatePackage" /></td>
+            <td data-bind="visible: isEdit"><input type="button" class="btn btn-danger btn-xs" value=" [x] cancel " data-bind="click: $parent.removePackage" /></td>
         </tr>
     </tbody>
 </table>
